@@ -565,6 +565,7 @@ X509_V_FLAG_INHIBIT_MAP
 X509_V_FLAG_NOTIFY_POLICY
 X509_V_FLAG_POLICY_CHECK
 X509_V_FLAG_POLICY_MASK
+X509_V_FLAG_TRUSTED_FIRST
 X509_V_FLAG_USE_CHECK_TIME
 X509_V_FLAG_USE_DELTAS
 X509_V_FLAG_X509_STRICT
